[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness-tracker"
version = "0.1.0"
description = "Personal body-measurement tracker with a Streamlit dashboard"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pandas",
    "pydantic",
    "plotly"
]

[tool.setuptools]
# Declare which folders are importable packages. Listing them explicitly
# is clearer than auto-discovery for a small project and documents intent.
packages = ["src", "src.core", "app"]